Switch to Java 19 and get Kotlin calling into Java
jextract is still having to run manually at the moment