@@ -19,13 +19,37 @@ dependencies {
     implementation(compose.desktop.currentOs)
 }
 
+configure<SourceSetContainer> {
+    named("main") {
+        java.srcDir("src/main/kotlin")
+    }
+}
+
+val jvmVersion = 19
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile::class).all {
+    // 19 doesn't seem to be recognised yet?
+    // kotlinOptions {
+    //     jvmTarget = jvmVersion.toString()
+    // }
+}
+
+java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(jvmVersion))
+}
+
+tasks.withType(JavaCompile::class).all {
+    options.compilerArgs.add("--enable-preview")
+}
+
 compose.desktop {
     application {
         mainClass = "MainKt"
         jvmArgs.addAll(listOf(
-            "--add-modules",
-            "jdk.incubator.foreign",
-            "--enable-native-access=ALL-UNNAMED"
+            //"--add-modules",
+            //"jdk.incubator.foreign",
+            "--enable-native-access=ALL-UNNAMED",
+            "--enable-preview"
         ))
 
         nativeDistributions {
